# Licensed under the Apache-2.0 license

[package]
name = "runtime"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
capsules-core.workspace = true
capsules-extra.workspace = true
capsules-runtime.workspace = true
capsules-system.workspace = true
components.workspace = true
flash-driver.workspace = true
i3c-driver.workspace = true
kernel.workspace = true
registers-generated.workspace = true
romtime.workspace = true
tock-registers.workspace = true

[target.'cfg(target_arch = "riscv32")'.dependencies]
riscv-csr.workspace = true
riscv.workspace = true
rv32i.workspace = true

[features]
default = []
test-i3c-simple = []
test-i3c-constant-writes = []
test-flash-ctrl-init = []
test-flash-ctrl-read-write-page = []
test-flash-ctrl-erase-page = []
test-mctp-ctrl-cmds = []
test-mctp-send-loopback = []
test-flash-storage-read-write = []
test-flash-storage-erase = []
