# Licensed under the Apache-2.0 license

[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

[dependencies]
clap.workspace = true
crc32fast.workspace = true
elf.workspace = true
emulator-consts.workspace = true
proc-macro2.workspace = true
quote.workspace = true
registers-generator.workspace = true
registers-systemrdl.workspace = true
semver.workspace = true
serde.workspace = true
serde-hjson.workspace = true
sudo.workspace = true
tempfile.workspace = true
toml.workspace = true
walkdir.workspace = true
zerocopy.workspace = true
