# Licensed under the Apache-2.0 license

[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

[features]
fpga_realtime = [
	"mcu-hw-model/fpga_realtime",
	"dep:caliptra-hw-model",
	"dep:mcu-hw-model",
]

[dependencies]
caliptra-api-types.workspace = true
anyhow.workspace = true
cargo_metadata.workspace = true
cc.workspace = true
caliptra-image-gen.workspace = true
caliptra-image-types.workspace = true
caliptra-hw-model = { workspace = true, optional = true }
clap.workspace = true
clap-num.workspace = true
crc32fast.workspace = true
elf.workspace = true
mcu-builder.workspace = true
mcu-config-emulator.workspace = true
mcu-config-fpga.workspace = true
mcu-rom-common.workspace = true
mcu-hw-model = { workspace = true, optional = true }
pldm-fw-pkg.workspace = true
proc-macro2.workspace = true
quote.workspace = true
registers-generator.workspace = true
registers-systemrdl.workspace = true
semver.workspace = true
serde.workspace = true
serde-hjson.workspace = true
sudo.workspace = true
tempfile.workspace = true
toml.workspace = true
walkdir.workspace = true
zerocopy.workspace = true

[build-dependencies]
cc.workspace = true
