# Licensed under the Apache-2.0 license

[package]
name = "emulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
caliptra-emu-cpu.workspace = true
bitfield.workspace = true
caliptra-emu-periph.workspace = true
clap.workspace = true
crc.workspace = true
crossterm.workspace = true
ctrlc.workspace = true
elf.workspace = true
emulator-bus.workspace = true
emulator-caliptra.workspace = true
emulator-cpu.workspace = true
emulator-periph.workspace = true
emulator-registers-generated.workspace = true
emulator-types.workspace = true
gdbstub_arch.workspace = true
gdbstub.workspace = true
hex.workspace = true
rand.workspace = true
strum_macros.workspace = true
strum.workspace = true
tock-registers.workspace = true
zerocopy.workspace = true

[features]
default = []
test-i3c-simple = []
test-i3c-constant-writes = ["emulator-periph/test-i3c-constant-writes"]
test-flash-ctrl-init = []
test-flash-ctrl-read-write-page = []
test-flash-ctrl-erase-page = []
test-flash-storage-read-write = []
test-flash-storage-erase = []
test-mctp-ctrl-cmds = ["emulator-periph/test-mctp-ctrl-cmds"]
test-mctp-capsule-loopback = ["emulator-periph/test-mctp-capsule-loopback"]
test-mctp-user-loopback = ["emulator-periph/test-mctp-user-loopback"]
