# Licensed under the Apache-2.0 license

[package]
name = "emulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitfield.workspace = true
caliptra-emu-bus.workspace = true
caliptra-emu-cpu.workspace = true
caliptra-emu-periph.workspace = true
caliptra-emu-types.workspace = true
caliptra-image-types.workspace = true
caliptra-test.workspace = true
clap.workspace = true
crc.workspace = true
crossterm.workspace = true
ctrlc.workspace = true
ecdsa.workspace = true
elf.workspace = true
emulator-bmc.workspace = true
emulator-bus.workspace = true
emulator-caliptra.workspace = true
emulator-cpu.workspace = true
emulator-periph.workspace = true
emulator-registers-generated.workspace = true
emulator-types.workspace = true
gdbstub_arch.workspace = true
gdbstub.workspace = true
hex.workspace = true
p384.workspace = true
rand.workspace = true
sec1.workspace = true
sha2.workspace = true
smlang.workspace = true
strum_macros.workspace = true
strum.workspace = true
tempfile.workspace = true
tock-registers.workspace = true
zerocopy.workspace = true

[features]
default = []
test-i3c-simple = []
test-i3c-constant-writes = ["emulator-periph/test-i3c-constant-writes"]
test-flash-ctrl-init = []
test-flash-ctrl-read-write-page = []
test-flash-ctrl-erase-page = []
test-flash-storage-read-write = []
test-flash-storage-erase = []
test-flash-usermode = []
test-mctp-ctrl-cmds = ["emulator-periph/test-mctp-ctrl-cmds"]
test-mctp-capsule-loopback = ["emulator-periph/test-mctp-capsule-loopback"]
test-mctp-user-loopback = ["emulator-periph/test-mctp-user-loopback"]
test-spdm-validator = ["emulator-periph/test-spdm-validator"]
test-exit-immediately = []
