# Licensed under the Apache-2.0 license

[package]
name = "emulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitfield.workspace = true
caliptra-emu-bus.workspace = true
caliptra-emu-cpu.workspace = true
caliptra-emu-periph.workspace = true
caliptra-emu-types.workspace = true
caliptra-image-types.workspace = true
chrono.workspace = true
clap.workspace = true
clap-num.workspace = true
crc.workspace = true
crossterm.workspace = true
ctrlc.workspace = true
ecdsa.workspace = true
elf.workspace = true
emulator-bmc.workspace = true
emulator-caliptra.workspace = true
emulator-consts.workspace = true
emulator-mcu-mbox.workspace = true
emulator-periph.workspace = true
emulator-registers-generated.workspace = true
gdbstub_arch.workspace = true
gdbstub.workspace = true
hex.workspace = true
log.workspace = true
lazy_static.workspace = true
mcu-mbox-common.workspace = true
mcu-testing-common.workspace = true
p384.workspace = true
pldm-common.workspace = true
pldm-fw-pkg.workspace = true
pldm-ua.workspace = true
rand.workspace = true
registers-generated.workspace = true
sec1.workspace = true
sha2.workspace = true
semver.workspace = true
simple_logger.workspace = true
smlang.workspace = true
strum_macros.workspace = true
strum.workspace = true
tempfile.workspace = true
tock-registers.workspace = true
uuid.workspace = true
zerocopy.workspace = true

[dev-dependencies]
caliptra-test.workspace = true

[[bin]]
name = "emulator"
path = "src/main.rs"

[lib]
name = "emulator"
path = "src/lib.rs"

[features]
default = []
test-caliptra-certs = []
test-caliptra-crypto = []
test-caliptra-mailbox = []
test-get-device-state = []
test-dma = []
test-doe-transport-loopback = ["emulator-periph/test-doe-transport-loopback"]
test-doe-discovery = ["emulator-periph/test-doe-discovery"]
test-doe-spdm-responder-conformance = [
    "emulator-periph/test-doe-spdm-responder-conformance",
]
test-doe-user-loopback = ["emulator-periph/test-doe-user-loopback"]
test-i3c-simple = []
test-i3c-constant-writes = ["emulator-periph/test-i3c-constant-writes"]
test-flash-based-boot = []
test-flash-ctrl-init = []
test-flash-ctrl-read-write-page = []
test-flash-ctrl-erase-page = []
test-flash-storage-read-write = []
test-flash-storage-erase = []
test-flash-usermode = []
test-firmware-update-flash = []
test-firmware-update-streaming = []
test-log-flash-linear = []
test-log-flash-circular = []
test-log-flash-usermode = []
test-mbox-sram = []
test-mci = []
test-mctp-ctrl-cmds = ["emulator-periph/test-mctp-ctrl-cmds"]
test-mctp-user-loopback = ["emulator-periph/test-mctp-user-loopback"]
test-mctp-spdm-responder-conformance = [
    "emulator-periph/test-mctp-spdm-responder-conformance",
]
test-mcu-mbox = ["emulator-periph/test-mcu-mbox"]
test-mcu-mbox-soc-requester-loopback = []
test-mcu-mbox-usermode = []
test-mcu-mbox-cmds = []
test-mcu-rom-flash-access = []
test-mcu-svn-gt-fuse = []
test-mcu-svn-lt-fuse = []
test-exit-immediately = []
test-pldm-request-response = []
test-pldm-discovery = []
test-pldm-fw-update = []
test-pldm-fw-update-e2e = []
test-pldm-streaming-boot = []
test-warm-reset = []
