# Licensed under the Apache-2.0 license

[package]
name = "compliance-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
emulator-bus.workspace = true
emulator-cpu.workspace = true
emulator-types.workspace = true
clap.workspace = true
getrandom.workspace = true
