# Licensed under the Apache-2.0 license

[package]
name = "emulator-cpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit-vec.workspace = true
bitfield.workspace = true
emulator-bus.workspace = true
emulator-derive.workspace = true
emulator-types.workspace = true
lazy_static.workspace = true
tock-registers.workspace = true
