# Licensed under the Apache-2.0 license

[package]
name = "emulator-derive"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
caliptra-emu-bus.workspace = true
caliptra-emu-types.workspace = true
emulator-bus.workspace = true
proc-macro2.workspace = true
quote.workspace = true
