# Licensed under the Apache-2.0 license

[package]
name = "emulator-periph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitfield.workspace = true
caliptra-emu-bus.workspace = true
caliptra-emu-types.workspace = true
emulator-bus.workspace = true
emulator-consts.workspace = true
emulator-cpu.workspace = true
emulator-derive.workspace = true
emulator-registers-generated.workspace = true
lazy_static.workspace = true
num_enum.workspace = true
registers-generated.workspace = true
serde_json.workspace = true
serde.workspace = true
tock-registers.workspace = true
zerocopy.workspace = true

[dev-dependencies]
tempfile.workspace = true

[features]
default = []
test-i3c-constant-writes = []
test-flash-ctrl-init = []
test-flash-ctrl-read-write-page = []
test-flash-ctrl-erase-page = []
test-flash-storage-read-write = []
test-flash-storage-erase = []
test-flash-usermode = []
test-mctp-ctrl-cmds = []
test-mctp-capsule-loopback = []
test-mctp-user-loopback = []
test-pldm-request-response = []
test-pldm-discovery = []
test-pldm-fw-update = []
test-spdm-validator = []
