# Licensed under the Apache-2.0 license

[package]
name = "emulator-periph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitfield.workspace = true
caliptra-emu-bus.workspace = true
caliptra-emu-cpu.workspace = true
caliptra-emu-types.workspace = true
caliptra-emu-derive.workspace = true
caliptra-image-types.workspace = true
caliptra-emu-periph.workspace = true
emulator-consts.workspace = true
emulator-registers-generated.workspace = true
lazy_static.workspace = true
num_enum.workspace = true
registers-generated.workspace = true
semver.workspace = true
serde_json.workspace = true
serde.workspace = true
tock-registers.workspace = true
zerocopy.workspace = true

[dev-dependencies]
tempfile.workspace = true

[features]
default = []
test-dma = []
test-doe-transport-loopback = []
test-doe-discovery = []
test-doe-user-loopback = []
test-i3c-constant-writes = []
test-flash-based-boot = []
test-flash-ctrl-init = []
test-flash-ctrl-read-write-page = []
test-flash-ctrl-erase-page = []
test-flash-storage-read-write = []
test-flash-storage-erase = []
test-flash-usermode = []
test-firmware-update-flash = []
test-firmware-update-streaming = []
test-log-flash-linear = []
test-log-flash-circular = []
test-log-flash-usermode = []
test-mctp-ctrl-cmds = []
test-mctp-user-loopback = []
test-mcu-mbox = []
test-mcu-mbox-soc-requester-loopback = []
test-mcu-mbox-usermode = []
test-mcu-rom-flash-access = []
test-mcu-svn-gt-fuse = []
test-mcu-svn-lt-fuse = []
test-pldm-request-response = []
test-pldm-discovery = []
test-pldm-fw-update = []
test-pldm-fw-update-e2e = []
test-pldm-streaming-boot = []
test-mctp-spdm-responder-conformance = []
test-doe-spdm-responder-conformance = []
