# Licensed under the Apache-2.0 license

[package]
name = "mcu-hw-model"
version.workspace = true
edition.workspace = true

[features]
default = []
fpga_realtime = [
    "dep:uio",
    "dep:mcu-config-fpga",
    "caliptra-hw-model/fpga_subsystem",
]
itrng = []

[dependencies]
anyhow.workspace = true
bit-vec.workspace = true
bitfield.workspace = true
caliptra-api-types.workspace = true
caliptra-api.workspace = true
caliptra-emu-bus.workspace = true
caliptra-emu-cpu.workspace = true
caliptra-emu-periph.workspace = true
caliptra-emu-types.workspace = true
caliptra-hw-model-types.workspace = true
caliptra-hw-model.workspace = true
caliptra-image-types.workspace = true
caliptra-registers.workspace = true
ecdsa.workspace = true
emulator-bmc.workspace = true
emulator-caliptra.workspace = true
emulator-periph.workspace = true
emulator-registers-generated.workspace = true
fips204.workspace = true
hex.workspace = true
libc.workspace = true
mcu-builder.workspace = true
mcu-config-fpga = { workspace = true, optional = true }
mcu-config.workspace = true
mcu-rom-common.workspace = true
mcu-testing-common.workspace = true
nix.workspace = true
p384.workspace = true
poll-common.workspace = true
rand.workspace = true
registers-generated.workspace = true
semver.workspace = true
sha2.workspace = true
sha3.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tock-registers.workspace = true
uio = { workspace = true, optional = true }
ureg.workspace = true
zerocopy.workspace = true

[dev-dependencies]
caliptra-builder.workspace = true
caliptra-registers.workspace = true
caliptra-test-harness-types.workspace = true
nix.workspace = true
