# Licensed under the Apache-2.0 license

[package]
name = "emulator-registers-generated"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
emulator-bus.workspace = true
emulator-types.workspace = true
registers-generated.workspace = true
tock-registers.workspace = true
