# Licensed under the Apache-2.0 license

[package]
name = "capsules-runtime"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
kernel = { git = "https://github.com/tock/tock.git", rev = "b128ae817b86706c8c4e39d27fae5c54b98659f1" }

capsules-extra = { git = "https://github.com/tock/tock.git", rev = "b128ae817b86706c8c4e39d27fae5c54b98659f1" }
i3c-driver.workspace = true
zerocopy.workspace = true
bitfield.workspace = true
