# Licensed under the Apache-2.0 license

[package]
name = "capsules-runtime"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
bitfield.workspace = true
capsules-extra.workspace = true
capsules-core.workspace = true
flash-driver.workspace = true
i3c-driver.workspace = true
kernel.workspace = true
romtime.workspace = true
zerocopy.workspace = true
