# Licensed under the Apache-2.0 license

[package]
name = "i3c-driver"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
kernel = { git = "https://github.com/tock/tock.git", rev = "b128ae817b86706c8c4e39d27fae5c54b98659f1" }

[target.'cfg(target_arch = "riscv32")'.dependencies]
capsules-core = { git = "https://github.com/tock/tock.git", rev = "b128ae817b86706c8c4e39d27fae5c54b98659f1" }
registers-generated.workspace = true
romtime.workspace = true
tock-registers.workspace = true
