# Licensed under the Apache-2.0 license

[package]
name = "tests-integration"
version = "0.1.0"
edition = "2021"

[features]
default = []
fpga_realtime = ["dep:uio", "mcu-hw-model/fpga_realtime"]
itrng = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
caliptra-hw-model-types.workspace = true
caliptra-hw-model.workspace = true
caliptra-image-types.workspace = true
chrono.workspace = true
crc.workspace = true
flash-image.workspace = true
hex.workspace = true
lazy_static.workspace = true
log.workspace = true
mcu-builder.workspace = true
mcu-config.workspace = true
mcu-config-emulator.workspace = true
mcu-config-fpga.workspace = true
mcu-hw-model.workspace = true
mcu-image-header.workspace = true
mcu-rom-common.workspace = true
mcu-testing-common.workspace = true
pldm-common.workspace = true
pldm-fw-pkg.workspace = true
pldm-ua.workspace = true
simple_logger.workspace = true
tempfile.workspace = true
uio = { workspace = true, optional = true }
uuid.workspace = true
zerocopy.workspace = true
