# Licensed under the Apache-2.0 license

[package]
name = "emulator-mcu-mbox"
version.workspace = true
edition.workspace = true

[dependencies]
emulator-consts.workspace = true
emulator-periph.workspace = true
caliptra-emu-bus.workspace = true
registers-generated.workspace = true
tock-registers.workspace = true