# Licensed under the Apache-2.0 license

[package]
name = "pldm-fw-pkg"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name = "pldm-fw-pkg"
path = "src/main.rs"

[dependencies]
chrono.workspace = true
toml.workspace = true
uuid.workspace = true
serde.workspace = true
crc.workspace = true
clap.workspace = true
num-traits.workspace = true
num-derive.workspace = true
