# Licensed under the Apache-2.0 license

[package]
name = "pldm-ua"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
log.workspace = true
pldm-common.workspace = true
pldm-fw-pkg.workspace = true
smlang.workspace = true

[dev-dependencies]
chrono.workspace = true
simple_logger.workspace = true
uuid.workspace = true


