# Licensed under the Apache-2.0 license

[package]
name = "example-app"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
critical-section.workspace = true
embassy-executor.workspace = true
libtock_alarm.workspace = true
libtock_console.workspace = true
libtock_debug_panic.workspace = true
libtock_platform.workspace = true
libtock_runtime.workspace = true
libtock.workspace = true
libtockasync.workspace = true
portable-atomic.workspace = true

[target.'cfg(not(target_arch = "riscv32"))'.dependencies]
libtock_unittest.workspace = true

[target.'cfg(target_arch = "riscv32")'.dependencies]
embassy-executor = { version = "0.6.3", features = ["arch-riscv32", "nightly"] }
embedded-alloc.workspace = true
