# Licensed under the Apache-2.0 license

[package]
name = "libtockasync"
description = "Async executor and tools for applications running under Tock"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
critical-section = "1.1.2"
embassy-executor = { version = "0.6.3", features = ["nightly"] }
libtock = { path = "../libtock" }
libtock_alarm = { path = "../libtock/apis/peripherals/alarm" }
libtock_console = { path = "../libtock/apis/interface/console" }
libtock_debug_panic = { path = "../libtock/panic_handlers/debug_panic" }
libtock_platform = { path = "../libtock/platform" }
libtock_runtime = { path = "../libtock/runtime" }
portable-atomic = "1.7.0"

[target.'cfg(not(target_arch = "riscv32"))'.dependencies]
embassy-executor = { version = "0.6.3", features = ["arch-riscv32", "nightly"] }
libtock_unittest = { path = "../libtock/unittest" }

[target.'cfg(target_arch = "riscv32")'.dependencies]
embedded-alloc = "0.5.1"
