# Licensed under the Apache-2.0 license

[package]
name = "pldm-app"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
critical-section = "1.1.2"
embassy-executor = "0.5.0"
embedded-alloc = "0.5.1"
libtock = { git = "https://github.com/tock/libtock-rs.git", rev = "f4bd533a37a65c5eb15d1488be61b2d00872dfc5" }
libtock_alarm = { git = "https://github.com/tock/libtock-rs.git", rev = "f4bd533a37a65c5eb15d1488be61b2d00872dfc5" }
libtock_console = { git = "https://github.com/tock/libtock-rs.git", rev = "f4bd533a37a65c5eb15d1488be61b2d00872dfc5" }
libtock_debug_panic = { git = "https://github.com/tock/libtock-rs.git", rev = "f4bd533a37a65c5eb15d1488be61b2d00872dfc5" }
libtock_platform = { git = "https://github.com/tock/libtock-rs.git", rev = "f4bd533a37a65c5eb15d1488be61b2d00872dfc5" }
libtock_runtime = { git = "https://github.com/tock/libtock-rs.git", rev = "f4bd533a37a65c5eb15d1488be61b2d00872dfc5" }
portable-atomic = "1.7.0"
