# Licensed under the Apache-2.0 license

[package]
name = "capsules-runtime"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
bitfield.workspace = true
caliptra-api.workspace = true
capsules-core.workspace = true
capsules-extra.workspace = true
doe-transport.workspace = true
i3c-driver.workspace = true
mcu-mbox-comm.workspace = true
kernel.workspace = true
registers-generated.workspace = true
romtime.workspace = true
tock-registers.workspace = true
ureg.workspace = true
zerocopy.workspace = true
