# Licensed under the Apache-2.0 license.

[package]
name = "mcu-components"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
capsules-core.workspace = true
capsules-extra.workspace = true
capsules-emulator.workspace = true
capsules-runtime.workspace = true
capsules-system.workspace = true
components.workspace = true
dma-driver.workspace = true
doe-transport.workspace = true
flash-driver.workspace = true
i3c-driver.workspace = true
kernel.workspace = true
mcu-config.workspace = true
mcu-config-emulator.workspace = true
mcu-tock-veer.workspace = true
registers-generated.workspace = true
romtime.workspace = true
tock-registers.workspace = true
